[package]
name = "anchors"
version = "0.6.0"
authors = ["Robert Lord <robert@lord.io>"]
edition = "2018"
description = "async incremental computations"
license = "MIT"
documentation = "https://docs.rs/anchors"
repository = "https://github.com/lord/anchors"
rust-version = "1.62.1"

[lib]
bench = false

[dependencies]
typed-arena = "2.0.1"
im = { version = "15.0.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
im = ["dep:im"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true

[profile.bench]
lto = true
